完成简易登录  jwt token+cookie